# baka

./: .gitignore  Makefile  Makefile.in  configure.ac
data/: Makefile.am  baka.ui
src/: .gitignore  Makefile  Makefile.am  Makefile.in  baka.c  baka.h  credits.h  interface.c  interface.h  menu.c  menu.h
